tests/it/snapshots/it__snapshot_screens__action_menu.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 479
description: ContactDetail → press Enter on field
expression: output
---
                                Abigale Schroeder

 ○ Sync  [Enter]
┌ Perspective ─────────────────────────────────────────────────────────────────┐
  [Avatar: AS]
┌ Abigale Schroeder ───────────────────────────────────────────────────────────┐
┌ Contact fields ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:   ┌ Actions [Es┐
┌ Contact fields ────────────────│  Call      │────────────────────────────────┐
└────────────────────────────────│  Send SMS  │────────────────────────────────┘
  Private note for this field:   │  Copy      │
┌ Contact fields ────────────────└────────────┘────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:   [Enter] Edit
  Private note:   [Enter] Edit
┌──────────────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘

┌ Trust & Permissions ─────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recovery ────────────────────────────────────────────────────────────────────┐
[e] Edit  [Enter] Verify Fingerprint  [Enter] Hide contact  [d] Archive Contact
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
