tests/it/snapshots/it__snapshot_screens__contact_detail.snap
---
source: tests/it/snapshot_screens.rs
description: Contacts → press Enter on contact
expression: output
---
                                Abigale Schroeder

 ○ Sync  [Enter]
┌ Perspective ─────────────────────────────────────────────────────────────────┐
  [Avatar: AS]
┌ Abigale Schroeder ───────────────────────────────────────────────────────────┐
┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:
┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:
┌ Fields ──────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
  Private note for this field:
  Private note:
┌──────────────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘

┌ Trust & Permissions ─────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recovery ────────────────────────────────────────────────────────────────────┐
[e] Edit  [Enter] Verify Fingerprint  [Enter] Hide contact  [d] Archive Contact
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
