tests/it/snapshots/it__snapshot_screens__contact_duplicates.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 818
description: Contacts → duplicates detected
expression: output
---
                               Duplicate Detection

4 potential duplicate(s) found

┌──────────────────────────────────────────────────────────────────────────────┐
│   • Andreanne Doyle <-> Andres Raynor  74% similar                           │
│   • Andreanne Doyle <-> Eduardo Reyes  72% similar                           │
│   • Andres Raynor <-> Eduardo Reyes  71% similar                             │
│   • Brady Koss <-> Eduardo Reyes  70% similar                                │
└──────────────────────────────────────────────────────────────────────────────┘












[?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
