tests/it/snapshots/it__snapshot_screens__contact_limit.snap
---
source: tests/it/snapshot_screens.rs
description: Contacts → approach contact limit
expression: output
---
                                  Contact Limit

 ○ Sync  [Enter]
Set a maximum number of contacts to manage storage.

10 contacts (no limit)

Max Contacts
┌──────────────────────────────────────────────────────────────────────────────┐
│0                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘











[e] Edit Limit  [?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
