tests/it/snapshots/it__snapshot_screens__contact_merge.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 839
description: ContactDuplicates → select duplicate pair
expression: output
---
                                 Merge Contacts

Ahmed Nikolaus (keep) <- Ahmed N. (remove)

┌ Ahmed Nikolaus (keep) ───────────────────────────────────────────────────────┐
│                                                                              │
│  +1-203-107-1013                                                             │
│                                                                              │
│                                                                              │
│  ahmed.nikolaus@example.com                                                  │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Ahmed N. (remove) ───────────────────────────────────────────────────────────┐
│                                                                              │
│  +1-203-107-1013                                                             │
│                                                                              │
│                                                                              │
│  ahmed.n@example.com                                                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Unique fields from the secondary will be added to the primary. The secondary wil

[Enter] Confirm Merge  [Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
